# nes_ml_course_homeworks

./: README.md  homework_practice_1.ipynb  homework_practice_2.ipynb  homework_practice_3.ipynb  homework_practice_4.ipynb  homework_practice_5.ipynb  homework_practice_6.ipynb  pyproject.toml
