[project]
name = "ml-course-hws"
version = "0.1.0"
description = "Machine Learning course homework assignments and experiments"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "haversine>=2.9.0",
    "matplotlib>=3.10.8",
    "narwhals>=2.16.0",
    "notebook>=7.5.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
